tests/ui/env-macro/env-not-defined-custom.rs
fn main() { env!("__HOPEFULLY_NOT_DEFINED__", "my error message"); } //~ ERROR: my error message
